[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixel-font-build-tools"
version = "0.0.0"
description = "A set of tools for building pixel fonts."
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.11"
authors = [
    { name = "TakWolf" },
]
maintainers = [
    { name = "TakWolf" },
]
keywords = ["font", "pixel"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pixel-font-builder>=0.0.12",
]

[project.urls]
homepage = "https://github.com/TakWolf/pixel-font-build-tools"
source = "https://github.com/TakWolf/pixel-font-build-tools"
issues = "https://github.com/TakWolf/pixel-font-build-tools/issues"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src",
]
addopts = [
    "--import-mode=importlib",
]
